# UniversalLite

./: .gitignore  build.gradle  settings.gradle
app/: build.gradle  google-services.json
app/keystores/: debug.keystore  debug_dev.keystore  diveroid.keystore  diveroidv2020.keystore
app/src/main/: AndroidManifest.xml
app/src/main/res/drawable/: background_blue_radius.xml  background_border_white.xml  background_white_radius.xml
app/src/main/res/layout/: activity_auth.xml  activity_serial_scan.xml
app/src/main/res/values/: strings.xml  style.xml  themes.xml
app/src/main/res/values-ko/: strings.xml
app/src/main/res/values-v23/: themes.xml
app/src/main/res/xml/: backup_rules.xml  filepaths.xml
camera/: build.gradle
camera/src/main/: AndroidManifest.xml
camera/src/main/assets/: ainmation_fragment.glsl  ani_mini_pair_flow.json  animation_fragment.glsl  animation_fragmentuv.glsl  animation_vertex.glsl  circle_longpress.json  diveroid_loading.json  img_filter_click.json  img_filter_non.json  imgfilter_check.json  imgfilter_loading.json  log_share.json  mini_start_btn.json  rendered_fragment.glsl  rendered_fragmentuv.glsl  shop_location.json  vertex.glsl  wait_mini_paring.json
camera/src/main/cpp/: AnimationShader.cpp  AnimationShader.h  AquaShader.cpp  AquaShader.h  AquaShaderUV.cpp  AquaShaderUV.h  CMakeLists.txt  FilterPreProcessor.cpp  FilterPreProcessor.h  FilterReceived.cpp  FragmentShader.h  GLES2Lesson.cpp  GLES2Lesson.h  NdkGlue.cpp  RenderedShader.cpp  RenderedShader.h  RenderedShaderUV.cpp  RenderedShaderUV.h  processor.cpp
camera/src/main/cpp/back/: GLES2Lesson.h
camera/src/main/cpp/libyuv/: compare.cc  compare_common.cc  compare_gcc.cc  compare_neon.cc  compare_neon64.cc  compare_win.cc  convert.cc  convert.h  convert_argb.cc  convert_argb.h  convert_from.cc  convert_from_argb.cc  convert_jpeg.cc  convert_to_argb.cc  convert_to_i420.cc  cpu_id.cc  mjpeg_decoder.cc  mjpeg_validate.cc  planar_functions.cc  rotate.cc  rotate_any.cc  rotate_argb.cc  rotate_gcc.cc  rotate_neon.cc  rotate_neon64.cc  rotate_win.cc  row_any.cc  row_common.cc  row_gcc.cc  row_mmi.cc  row_msa.cc  row_neon.cc  row_neon64.cc  row_win.cc  scale.cc  scale_any.cc  scale_argb.cc  scale_common.cc  scale_gcc.cc  scale_mmi.cc  (+3 more)
camera/src/main/jni/: Android.mk  Application.mk  com_ao_diveroid_util_CvUtil.cpp  com_ao_diveroid_util_CvUtil.h
camera/src/main/res/anim/: anim_rec_blink.xml
camera/src/main/res/drawable/: bg_camera_angle_menu_root.xml  bg_camera_angle_menu_selected.xml  bg_mode.xml  filter_button_round_rect_shape.xml  filter_button_round_rect_shape2.xml  filter_progressbar_progress.xml  (+6 more)
gradle/wrapper/: gradle-wrapper.properties
(+129 files in other folders)
